# roguelike-algorithms

./: .gitignore  main.py  pyproject.toml
src/dungeon/: __init__.py  generator.py
src/grid/: grid.py
src/pathfinding/: __init__.py  astar.py  bfs.py
src/renderer/: render.py
tests/: test_astar.py  test_bfs.py  test_grid.py  test_renderer.py
